Bug 1329051 - Remove Old Driver Workaround. r=jgilbert